5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1637_2704.log
== TEST (2019-04-09 10:44:48) 
-- CODE:
nota = float(input"Nota do Respectivo aluno: ")
msg = input("Aluno recebera bonificacao? ")

eq = nota + ((10/100) * nota)
if (msg.upper() == "S"):
	rsp = eq
else: 
	rsp = nota

print(rsp)
	
	
-- ERROR:
File "XXXX", line 1
    nota = float(input"Nota do Respectivo aluno: ")
                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:45:14) 
-- CODE:
nota = float(input("Nota do Respectivo aluno: "))
msg = input("Aluno recebera bonificacao? ")

eq = nota + ((10/100) * nota)
if (msg.upper() == "S"):
	rsp = eq
else: 
	rsp = nota

print(rsp)
	
	
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:45:28) 
-- CODE:
nota = float(input("Nota do Respectivo aluno: "))
msg = input("Aluno recebera bonificacao? ")

eq = nota + ((10/100) * nota)
if (msg.upper() == "S"):
	rsp = eq
else: 
	rsp = nota

print(rsp)
	
	
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:45:39) 
-- CODE:
nota = float(input("Nota do Respectivo aluno: "))
msg = input("Aluno recebera bonificacao? ")

eq = nota + ((10/100) * nota)
if (msg.upper() == "S"):
	rsp = eq
else: 
	rsp = nota

print(rsp)
	
	
-- EXECUTION TIME:
0.142865
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
